--- a/clusters/dev/argocd/ingress.yaml
+++ b/clusters/dev/argocd/ingress.yaml
@@ -9,10 +9,11 @@ spec:
   rules:
     - http:
         paths:
-          - path: /
+          - path: /argocd
             pathType: Prefix
             backend:
               service:
                 name: argocd-server
                 port:
                   number: 80
+
