--- a/clusters/dev/argocd/ingress.yaml
+++ b/clusters/dev/argocd/ingress.yaml
@@ -8,13 +8,13 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`argocd.dct.dev`)
+      match: Host(`argocd.dct.infra`)
       priority: 10
       services:
         - name: argocd-server
           port: 80
     - kind: Rule
-      match: Host(`argocd.dct.dev`) && Headers(`Content-Type`, `application/grpc`)
+      match: Host(`argocd.dct.infra`) && Headers(`Content-Type`, `application/grpc`)
       priority: 11
       services:
         - name: argocd-server
@@ -22,4 +22,3 @@ spec:
           scheme: h2c
   tls:
     secretName: argocd-tls
-
