--- a/clusters/dev/argocd/argocd-cert.yaml
+++ b/clusters/dev/argocd/argocd-cert.yaml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: argocd.dct.dev
+  name: argocd.dct.infra
   namespace: argocd
 spec:
   secretName: argocd-tls
   dnsNames:
-    - argocd.dct.dev:8080
-    - localhost:8080
+    - argocd.dct.infra:8443
+    - localhost:8443
   ipAddresses:
     - 127.0.0.1
   issuerRef:
