--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,7 @@
 export TALOSCONFIG=./clusters/prd/terraform/talosconfig.yaml
 export KUBECONFIG=./clusters/prd/terraform/kubeconfig.yaml
+export CONTROLPLANE=$(cd ./clusters/prd/terraform && terraform output -raw control_nodes)
+export WORKERS=$(cd ./clusters/prd/terraform && terraform output -raw worker_nodes)
+export ALL="$CONTROLPLANE,$WORKERS"
+export C0=$(echo $CONTROLPLANE | cut -d, -f 1)
+export W0=$(echo $WORKERS | cut -d, -f 1)
