--- a/infrastructure/cert-manager/cluster-issuer-prd.yaml
+++ b/infrastructure/cert-manager/cluster-issuer-prd.yaml
@@ -1,11 +1,18 @@
+---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  app.kubernetes.io/name: cert-manager
-  app.kubernetes.io/managed-by: manual
-  app.kubernetes.io/component: cluster-infrastructure
+  name: cert-manager-prd
+  labels:
+    app.kubernetes.io/name: cert-manager
+    app.kubernetes.io/managed-by: manual
+    app.kubernetes.io/component: cluster-infrastructure
 spec:
   acme:
+    email: roel@decort.tech
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: cert-manager-prd-key
     solvers:
       - selector:
           dnsZones:
@@ -15,8 +22,8 @@ spec:
             region: eu-central-1
             accessKeyIDSecretRef:
               name: prd-aws-route53-credentials
-              value: access-key-id
+              key: access-key-id
             secretAccessKeySecretRef:
               name: prd-aws-route53-credentials
-              value: secret-access-key
+              key: secret-access-key
             role: arn:aws:iam::649665367473:role/cert-manager
