--- a/infrastructure/argocd/gateway.yaml
+++ b/infrastructure/argocd/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   name: argocd-gateway
   namespace: argocd
   annotations:
-    cert-manager.io/cluster-issuer: cert-manager-staging
+    cert-manager.io/cluster-issuer: cert-manager-prd
 spec:
   gatewayClassName: cilium
   listeners:
