--- a/infrastructure/argocd/gateway.yaml
+++ b/infrastructure/argocd/gateway.yaml
@@ -24,9 +24,28 @@ spec:
         namespaces:
           from: All
       tls:
-        #mode: Terminate
+        mode: Terminate
         certificateRefs:
           - name: argocd-tls
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: argocd-route-redirect
+  namespace: argocd
+spec:
+  parentRefs:
+    - name: argocd-gateway
+      namespace: argocd
+      sectionName: http
+  hostnames:
+    - "argocd.decort.tech"
+  rules:
+    - filters:
+        - type: RequestRedirect
+          requestRedirect:
+            scheme: https
+            statusCode: 301
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -37,7 +56,7 @@ spec:
   parentRefs:
     - name: argocd-gateway
       namespace: argocd
-      #sectionName: https
+      sectionName: https
   hostnames:
     - "argocd.decort.tech"
   rules:
