--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,10 +1,10 @@
 on:
   schedule:
-    - cron: "0 5 * * 6,3"
+    - cron: "30 21 * * 6,3"
 
 jobs:
   renovate:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@4.1.6
