--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,13 +1,13 @@
 on:
   schedule:
-    - cron: "30 21 * * 6,3"
+    - cron: "30 23 * * 6,3"
 
 jobs:
   renovate:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@4.1.6
+        uses: actions/checkout@v4
       - name: Renovate
         uses: renovatebot/github-action@v40.1.11
         with:
