configure EntraID OIDC

--- a/infrastructure/argocd/kustomization.yaml
+++ b/infrastructure/argocd/kustomization.yaml
@@ -8,4 +8,7 @@ resources:
   - namespace.yaml
 
 patchesStrategicMerge:
-  - configmap.yaml
+  - cmd-configmap.yaml
+  - cm-configmap.yaml
+  - rbac-configmap.yaml
+  - rbac-configmap.yaml
