--- a/infrastructure/argocd/application.yaml
+++ b/infrastructure/argocd/application.yaml
@@ -8,9 +8,14 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/dc-tec/k8s-gitops.git
+    repoURL: git@github.com/dc-tec/k8s-gitops.git
     targetRevision: main
     path: infrastructure/argocd
+    directory:
+      recurse: true
   destination:
     namespace: argocd
-    server: in-cluster
+    server: https://kubernetes.default.svc
+  syncPolicy:
+    automated: true
+    selfHeal: true
