--- a/infrastructure/cert-manager/kustomization.yaml
+++ b/infrastructure/cert-manager/kustomization.yaml
@@ -1,18 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cert-manager
 
-helmCharts:
-  - name: cert-manager
-    includeCRDs: true
-    releaseName: cert-manager
-    namespace: cert-manager
-    version: 1.14.2
-    repo: https://charts.jetstack.io
-    valuesInline:
-      installCRDs: true
-      globals:
-        leaderEelection:
-          namespace: cert-manager
-      extraArgs:
-        - "--feature-gates=ExperimentalGatewayAPISupport=true"
+namespace: cert-manager
+resources:
+  - https://github.com/cert-manager/cert-manager/releases/download/v1.14.5/cert-manager.yaml
+  - base/cluster-issuer-staging.yaml
+  - base/cluster-issuer-prd.yaml
+  - config/controller-config.yaml
