--- a/infrastructure/cert-manager/application.yaml
+++ b/infrastructure/cert-manager/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cert-manager
   namespace: argocd
   labels:
-    name: argocd
+    name: cert-manager
 spec:
   project: infrastructure
   source:
