--- a/infrastructure/cert-manager/config/controller-config.yaml
+++ b/infrastructure/cert-manager/config/controller-config.yaml
@@ -1,5 +1,8 @@
 apiVersion: controller.config.cert-manager.io/v1alpha1
 kind: ControllerConfiguration
 
+metadata:
+  name: cert-manager-controller-config
+
 featureGates:
   ExperimentalGatewayAPISupport: true
