fix namespace reference

--- a/infrastructure/cert-manager/application.yaml
+++ b/infrastructure/cert-manager/application.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: main
     path: infrastructure/cert-manager
   destination:
-    namespace: argocd
+    namespace: cert-manager
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
