--- a/infrastructure/argocd/overlays/cm-configmap.yaml
+++ b/infrastructure/argocd/overlays/cm-configmap.yaml
@@ -7,7 +7,14 @@ metadata:
     app.kubernetes.io/part-of: argocd
 data:
   url: https://argocd.decort.tech
-  kustomize.buildOptions: --enable-helm --load-restrictor LoadRestrictionsNone
+  kustomize.buildOptions: --enable-helm --load-restrictor LoadRestrictionsNone ## enable helm buildOptions and make sure we can reference resources outside of kustomzize
+  resource.exclusions: |
+    - apiGroups:
+      - cilium.io
+      kinds:
+      - CiliumIdentity
+      clusterss:
+      - "*"
   oidc.config: |
     name: Azure
     issuer: https://login.microsoftonline.com/9efbb2a3-8e4f-4a4b-ae0b-e53fe5049a2a/v2.0
