--- a/infrastructure/secret-management/sealed-secrets/kustomization.yaml
+++ b/infrastructure/secret-management/sealed-secrets/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-system
 
 resources:
   - https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.26.3/controller.yaml
