--- a/infrastructure/cert-manager/kustomization.yaml
+++ b/infrastructure/cert-manager/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: cert-manager
 resources:
   - base/cluster-issuer-prd.yaml
   - base/cluster-issuer-staging.yaml
+  - config/secrets/cloudflare-api.yaml
 
 helmCharts:
   - name: cert-manager
