update secret ref

--- a/infrastructure/secret-management/external-secrets/base/az-secret-store.yaml
+++ b/infrastructure/secret-management/external-secrets/base/az-secret-store.yaml
@@ -8,7 +8,12 @@ spec:
       environmentType: PublicCloud
       authType: ServicePrincipal
       vaultUrl: https://kv-lab-infra-prd-westeu.vault.azure.net/
-      authSecretRef: az-kv-secret
-      auth:
-        clientId: client-id
-        clientSecret: client-secret
+      authSecretRef:
+        clientId:
+          name: az-kv-secrets
+          key: client-id
+          namespace: external-secrets
+        clientSecret:
+          name: az-kv-secrets
+          key: client-secret
+          namespace: external-secrets
