--- a/infrastructure/secret-management/external-secrets/base/az-secret-store.yaml
+++ b/infrastructure/secret-management/external-secrets/base/az-secret-store.yaml
@@ -7,6 +7,7 @@ spec:
     azurekv:
       environmentType: PublicCloud
       vaultUrl: https://kv-lab-infra-prd-westeu.vault.azure.net/
+      tenantId: 9efbb2a3-8e4f-4a4b-ae0b-e53fe5049a2a
       authSecretRef:
         clientId:
           name: az-kv-secrets
