--- a/infrastructure/secret-management/external-secrets/base/az-secret-store.yaml
+++ b/infrastructure/secret-management/external-secrets/base/az-secret-store.yaml
@@ -10,10 +10,10 @@ spec:
       tenantId: 9efbb2a3-8e4f-4a4b-ae0b-e53fe5049a2a
       authSecretRef:
         clientId:
-          name: az-kv-secrets
+          name: az-kv-secret
           key: client-id
           namespace: external-secrets
         clientSecret:
-          name: az-kv-secrets
+          name: az-kv-secret
           key: client-secret
           namespace: external-secrets
