--- a/renovate.json5
+++ b/renovate.json5
@@ -1,5 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "onboarding": false,
+  "platform": "github",
+  "semanticCommits": true,
   "kubernetes": {
     "fileMatch": ["\\.yaml$"]
   },
