--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,7 +1,6 @@
 on:
-  workflow_dispatch
-  #schedule:
-  #  - cron: "30 23 * * 6,3"
+  schedule:
+    - cron: "30 23 * * 6,3"
 
 jobs:
   renovate:
