test github-tags and github-releases

--- a/renovate.json5
+++ b/renovate.json5
@@ -9,6 +9,18 @@
   "terraform": {
     "fileMatch": ["\\.tf$"]
   },
+  "regexManagers": [
+    {
+      "fileMatch": ["\\.yaml$"],
+      "matchStrings": ["https:\/\/github\\.com\/(?<depName>.*\/.*?)\/releases\/download\/(?<currentValue>.*?)\/"],
+      "datasourceTemplate": "github-releases"
+    },
+    {
+      "fileMatch": ["\\.yaml$"],
+      "matchStrings": ["https:\/\/raw\\.githubusercontent\\.com\/(?<depName>[^\/]*\/[^\/]*)\/(?<currentValue>.*?)\/"],
+      "datasourceTemplate": "github-tags"
+    }
+  ],
   "extends": [
     "config:recommended",
     "docker:enableMajor"
