--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,6 +1,7 @@
 on:
-  schedule:
-    - cron: "30 23 * * 6,3"
+  workflow_dispatch
+  #schedule:
+  #  - cron: "30 23 * * 6,3"
 
 jobs:
   renovate:
