--- a/renovate.json5
+++ b/renovate.json5
@@ -1,8 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "onboarding": false,
   "platform": "github",
   "semanticCommits": true,
+  "labels": ["renovate"],
   "kubernetes": {
     "fileMatch": ["\\.yaml$"]
   },
