gateway api promoted to beta (cert-manager v1.15)

--- a/infrastructure/cert-manager/kustomization.yaml
+++ b/infrastructure/cert-manager/kustomization.yaml
@@ -20,4 +20,4 @@ helmCharts:
         leaderEelection:
           namespace: cert-manager
       extraArgs:
-        - "--feature-gates=ExperimentalGatewayAPISupport=true"
+        - "--enable-gateway-api"
