--- a/infrastructure/cert-manager/kustomization.yaml
+++ b/infrastructure/cert-manager/kustomization.yaml
@@ -12,7 +12,7 @@ helmCharts:
     includeCRDs: true
     releaseName: cert-manager
     namespace: cert-manager
-    version: 1.14.2
+    version: v1.15.0
     repo: https://charts.jetstack.io
     valuesInline:
       installCRDs: true
@@ -20,4 +20,4 @@ helmCharts:
         leaderEelection:
           namespace: cert-manager
       extraArgs:
-        - "--feature-gates=ExperimentalGatewayAPISupport=true"
+        - "--enable-gateway-api"
