--- a/infrastructure/longhorn/kustomization.yaml
+++ b/infrastructure/longhorn/kustomization.yaml
@@ -4,4 +4,6 @@ kind: Kustomization
 namespace: longhorn
 resources:
   - https://raw.githubusercontent.com/longhorn/longhorn/v1.6.2/deploy/longhorn.yaml
-  - base/namespace.yaml
+
+patches:
+  - path: overlays/namespace.yaml
