--- a/infrastructure/longhorn/application.yaml
+++ b/infrastructure/longhorn/application.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: feature/configure-longhorn
     path: infrastructure/longhorn
   destination:
-    namespace: longhorn
+    namespace: longhorn-system
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
