--- a/infrastructure/longhorn/kustomization.yaml
+++ b/infrastructure/longhorn/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: longhorn-system
 resources:
   - https://raw.githubusercontent.com/longhorn/longhorn/v1.6.2/deploy/longhorn.yaml
+  - base/gateway.yaml
 
 patches:
   - path: overlays/namespace.yaml
