Feature/configure longhorn (#17)
Add Gateway, provide fix for cert-manager

--- a/infrastructure/longhorn/application.yaml
+++ b/infrastructure/longhorn/application.yaml
@@ -9,10 +9,10 @@ spec:
   project: infrastructure
   source:
     repoURL: git@github.com/dc-tec/k8s-gitops.git
-    targetRevision: main
+    targetRevision: feature/configure-longhorn
     path: infrastructure/longhorn
   destination:
-    namespace: longhorn
+    namespace: longhorn-system
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
