--- a/.envrc
+++ b/.envrc
@@ -5,4 +5,4 @@ export WORKERS=$(cd ./clusters/prd && terraform output -raw worker_nodes)
 export ALL="$CONTROLPLANE,$WORKERS"
 export C0=$(echo $CONTROLPLANE | cut -d, -f 1)
 export W0=$(echo $WORKERS | cut -d, -f 1)
-export ARM_ACCESS_KEY=$(az storage account keys list --resource-group rg-terraform-prod-westeu-001 --account-name dcttfbackendprod001 | jq '.[1].value' -r)
+export ARM_ACCESS_KEY=$(az storage account keys list --resource-group rg-dct-prd-westeu --account-name dcttfbackendprod001 | jq '.[1].value' -r)
