update db connection info

--- a/applications/vaultwarden/config/values.yaml
+++ b/applications/vaultwarden/config/values.yaml
@@ -8,7 +8,5 @@ data:
 
 database:
   type: "postgresql"
-  host:
-  port: 5432
-  username:
-  password:
+  existingSecret: vaultwarden-db-app
+  existingSecretKey: uri
