--- a/applications/vaultwarden/application.yaml
+++ b/applications/vaultwarden/application.yaml
@@ -9,7 +9,7 @@ spec:
   project: applications
   source:
     repoURL: git@github.com/dc-tec/k8s-gitops.git
-    targetRevision: main
+    targetRevision: feature/deploy-vaultwarden
     path: applications/vaultwarden
   destination:
     namespace: vaultwarden-app
