--- a/applications/vaultwarden/kustomization.yaml
+++ b/applications/vaultwarden/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
   - base/namespace.yaml
   - base/gateway.yaml
   - base/database.yaml
+  - config/secrets/vault-db-user.yaml
+  - config/secrets/vault-db-super-user.yaml
 
 helmCharts:
   - name: vaultwarden
