--- a/applications/vaultwarden/base/database.yaml
+++ b/applications/vaultwarden/base/database.yaml
@@ -17,7 +17,7 @@ spec:
   bootstrap:
     initdb:
       database: vaultwarden-app
-      owner: vaultwarden-app
+      owner: vaultwarden-db-user
       secret:
         name: vault-db-user
 
