--- a/applications/vaultwarden/base/gateway.yaml
+++ b/applications/vaultwarden/base/gateway.yaml
@@ -32,7 +32,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: vaultwarden-route-redirect
-  namespace: argocd
+  namespace: vaultwarden-app
 spec:
   parentRefs:
     - name: vaultwarden-gateway
