restore argocd and cert-manager

--- a/infrastructure/cert-manager/base/cluster-issuer-prd.yaml
+++ b/infrastructure/cert-manager/base/cluster-issuer-prd.yaml
@@ -20,5 +20,5 @@ spec:
         dns01:
           cloudflare:
             apiTokenSecretRef:
-              name: cloudflare-dns-api
+              name: cloudflare-api
               key: token
