--- a/infrastructure/secret-management/vault/base/certificate.yaml
+++ b/infrastructure/secret-management/vault/base/certificate.yaml
@@ -33,7 +33,7 @@ spec:
   issuerRef:
     name: cert-manager-self
     kind: ClusterIssuer
-    group: cert-manager.io
+    #group: cert-manager.io
 ---
 # Create CA Issuer using the Root CA
 apiVersion: cert-manager.io/v1
