--- a/infrastructure/secret-management/vault/base/certificate.yaml
+++ b/infrastructure/secret-management/vault/base/certificate.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: vault-infra
   annotations:
     cert-manager.io/approve: "true"
+    cert-manager.io/auto-approve: "true"
     cert-manager.io/cluster-issuer: cert-manager-self
     cert-manager.io/issuer-group: cert-manager.io
 spec:
@@ -51,6 +52,9 @@ kind: Certificate
 metadata:
   name: vault-internal-tls
   namespace: vault-infra
+  annotations:
+    cert-manager.io/approve: "true"
+    cert-manager.io/auto-approve: "true"
 spec:
   secretName: vault-internal-tls
   duration: 720h # 30 days
