--- a/infrastructure/secret-management/vault/base/certificate-policy.yaml
+++ b/infrastructure/secret-management/vault/base/certificate-policy.yaml
@@ -1,1 +1,15 @@
- 
+# Certificate approval policy - deploy in vault-infra namespace
+apiVersion: cert-manager.io/v1alpha1
+kind: ClusterIssuerPolicy
+metadata:
+  name: auto-approve-vault-certs
+  namespace: vault-infra
+spec:
+  targets:
+    - issuerRef:
+        group: cert-manager.io
+        kind: ClusterIssuer
+        name: cert-manager-self
+  conditions:
+    - commonName: "Vault Root CA"
+      namespace: "vault-infra" 
