--- a/infrastructure/secret-management/vault/kustomization.yaml
+++ b/infrastructure/secret-management/vault/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - base/certificate.yaml
   - base/certificate-policy.yaml
   - base/vault-approver-rbac.yaml
+  - config/secrets/pkcs12-secret.yaml
 
 helmCharts:
   - name: vault
