resize data and audit disks

--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -40,8 +40,10 @@ server:
 
   dataStorage:
     enabled: true
+    size: 5Gi
   auditStorage:
     enabled: true
+    size: 5Gi
 
   standalone:
     enabled: false
