--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -42,8 +42,7 @@ server:
     enabled: true
     size: 5Gi
   auditStorage:
-    enabled: true
-    size: 5Gi
+    enabled: false
 
   standalone:
     enabled: false
