--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -62,3 +62,7 @@ spec:
     - backendRefs:
         - name: vault-active
           port: 8200
+      matches:
+        - path:
+            type: PathPrefix
+            value: /ui
