--- a/infrastructure/secret-management/vault/application.yaml
+++ b/infrastructure/secret-management/vault/application.yaml
@@ -14,6 +14,11 @@ spec:
   destination:
     namespace: vault-infra
     server: https://kubernetes.default.svc
+  ignoreDifferences:
+  - group: admissionregistration.k8s.io
+    kind: MutatingWebhookConfiguration
+    name: vault-agent-injector-cfg
+    namespace: vault-infra
   syncPolicy:
     automated:
       prune: true
