set correct CA certificate location

--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -40,9 +40,11 @@ server:
   extraVolumes:
     - type: secret
       name: vault-internal-tls
+    - type: secret
+      name: vault-ca-tls
 
   extraEnvironmentVars:
-    VAULT_CACERT: /vault/userconfig/vault-internal-tls/tls.crt
+    VAULT_CACERT: /vault/userconfig/vault-ca-tls/ca.crt
 
   dataStorage:
     enabled: true
@@ -79,19 +81,19 @@ server:
         path = "/vault/data"
         retry_join {
           leader_api_addr = "https://vault-0.vault-internal:8200"
-          leader_ca_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
+          leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
           leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
         }
         retry_join {
           leader_api_addr = "https://vault-1.vault-internal:8200"
-          leader_ca_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
+          leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
           leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
         }
         retry_join {
           leader_api_addr = "https://vault-2.vault-internal:8200"
-          leader_ca_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
+          leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
           leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
           leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
         }
