--- a/infrastructure/secret-management/vault/base/gateway.yaml
+++ b/infrastructure/secret-management/vault/base/gateway.yaml
@@ -60,5 +60,5 @@ spec:
     - "vault.decort.tech"
   rules:
     - backendRefs:
-        - name: vault-active
+        - name: vault-ui
           port: 8200
