--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -49,6 +49,7 @@ server:
   dataStorage:
     enabled: true
     size: 5Gi
+
   auditStorage:
     enabled: false
 
@@ -62,40 +63,47 @@ server:
       enabled: true
       setNodeId: true
     
-    config: |
-      ui = true
-      cluster_name = prd-dct-vault
-
-      listener "tcp" {
-        address = "[::]:8200"
-        cluster_address = "[::]:8201"
-        tls_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
-        tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
-      }
-
-      service_registration "kubernetes" {}
-
-      storage "raft" {
-        path = "/vault/data"
-        retry_join {
-          leader_api_addr = "https://vault-0.vault-internal:8200"
-          leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
-          leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
-          leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
+      config: |
+        ui = true
+        cluster_name = prd-dct-vault
+        
+        listener "tcp" {
+          address = "[::]:8200"
+          cluster_address = "[::]:8201"
+          tls_ca_file = "/vault/userconfig/vault-ca-tls/ca.crt"
+          tls_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
+          tls_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
         }
-        retry_join {
-          leader_api_addr = "https://vault-1.vault-internal:8200"
-          leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
-          leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
-          leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
+
+        service_registration "kubernetes" {
+          namespace      = "longhorn-system"
+          pod_name       = "vault-0"
         }
-        retry_join {
-          leader_api_addr = "https://vault-2.vault-internal:8200"
-          leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
-          leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
-          leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
+
+        storage "raft" {
+          path = "/vault/data"
+        
+          retry_join {
+            leader_api_addr = "https://vault-0.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
+            leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
+          }
+    
+          retry_join {
+            leader_api_addr = "https://vault-1.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
+            leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
+          }
+    
+          retry_join {
+            leader_api_addr = "https://vault-2.vault-internal:8200"
+            leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
+            leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
+            leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
+          }
         }
-      }
 
 ui:
   enabled: true
