--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -83,21 +83,21 @@ server:
           path = "/vault/data"
         
           retry_join {
-            leader_api_addr = "https://vault-0.vault-infra:8200"
+            leader_api_addr = "https://vault-0.vault-internal:8200"
             leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
             leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
             leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
           }
     
           retry_join {
-            leader_api_addr = "https://vault-1.vault-infra:8200"
+            leader_api_addr = "https://vault-1.vault-internal:8200"
             leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
             leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
             leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
           }
     
           retry_join {
-            leader_api_addr = "https://vault-2.vault-infra:8200"
+            leader_api_addr = "https://vault-2.vault-internal:8200"
             leader_ca_cert_file = "/vault/userconfig/vault-ca-tls/ca.crt"
             leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
             leader_client_key_file = "/vault/userconfig/vault-internal-tls/tls.key"
