--- a/infrastructure/secret-management/vault/config/values.yaml
+++ b/infrastructure/secret-management/vault/config/values.yaml
@@ -36,7 +36,7 @@ server:
     scheme: HTTPS
   livenessProbe:
     enabled: true
-    path: "/v1/sys/health?standbyok=true"
+    path: "/v1/sys/health?sealedcode=204&standbycode=204&uninitcode=204"
     scheme: HTTPS
     initialDelaySeconds: 60
 
@@ -49,8 +49,8 @@ server:
 
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/vault-ca-tls/ca.crt
-    VAULT_TLSCERT: /vault/userconfig/vault-internal-tls/tls.crt
-    VAULT_TLSKEY: /vault/userconfig/vault-internal-tls/tls.key
+    VAULT_TLS_CERT: /vault/userconfig/vault-internal-tls/tls.crt
+    VAULT_TLS_KEY: /vault/userconfig/vault-internal-tls/tls.key
 
   dataStorage:
     enabled: true
